--- a/.my_templates/flutter_tdd_clean_templates/core/errors/failure.template
+++ b/.my_templates/flutter_tdd_clean_templates/core/errors/failure.template
@@ -1,5 +1,5 @@
 import 'package:equatable/equatable.dart';
-import 'package:gymtor/core/errors/exceptions.dart';
+import 'exceptions.dart';
 
 /// Base class for application failures.
 ///
