feat(usecases): updated new way to usecase and added test

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   ],
   "activationEvents": [
     "onCommand:tdd-clean-architecture.createInitials",
+    "onCommand:tdd-clean-architecture.createRepository",
     "onCommand:tdd-clean-architecture.createFolders",
     "onCommand:tdd-clean-architecture.createUsecase"
   ],
@@ -117,6 +118,11 @@
           "when": "explorerResourceIsFolder",
           "command": "tdd-clean-architecture.createUsecase",
           "group": "1_clean_architecture_scaffolding@2"
+        },
+        {
+          "when": "explorerResourceIsFolder",
+          "command": "tdd-clean-architecture.createRepository",
+          "group": "1_clean_architecture_scaffolding@3"
         }
       ]
     },
@@ -134,6 +140,11 @@
       {
         "command": "tdd-clean-architecture.createUsecase",
         "title": "TDD Clean Arch.: New usecase",
+        "category": "TDD Clean Arch"
+      },
+      {
+        "command": "tdd-clean-architecture.createRepository",
+        "title": "TDD Clean Arch.: New Repository",
         "category": "TDD Clean Arch"
       }
     ]
