--- a/.my_templates/flutter_tdd_clean_templates/feature/repository/{{repository_name.snakeCase}}_repository.template
+++ b/.my_templates/flutter_tdd_clean_templates/feature/repository/{{repository_name.snakeCase}}_repository.template
@@ -14,6 +14,6 @@ abstract class I{{repository_name.pascalCase}}Repository {
 
   /// Returns a [ResultFuture] containing the success
   /// if the credentials are valid, otherwise a failure.
-  ResultFuture<bool> login({required String email, required String password}); //! TODO: Replace by your own methods
+  ResultFuture<Entity> login({required String email, required String password}); //! TODO: Replace by your own methods
 
 }
