--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "url": "https://github.com/alcampospalacios/flutter_tdd_clean_architecture"
   },
   "engines": {
-    "vscode": "^1.70.0"
+    "vscode": "^1.75.0"
   },
   "categories": [
     "Snippets",
@@ -31,13 +31,6 @@
     "clean arch",
     "scaffolding",
     "templates"
-  ],
-  "activationEvents": [
-    "onCommand:tdd-clean-architecture.createInitials",
-    "onCommand:tdd-clean-architecture.createRepository",
-    "onCommand:tdd-clean-architecture.createFolders",
-    "onCommand:tdd-clean-architecture.createUsecase",
-    "onCommand:tdd-clean-architecture.createUsecaseNoParams"
   ],
   "main": "./out/extension.js",
   "contributes": {
@@ -201,21 +194,22 @@
   },
   "devDependencies": {
     "@types/glob": "^7.2.0",
-    "@types/js-yaml": "^3.12.1",
-    "@types/lodash": "^4.14.121",
-    "@types/mocha": "^9.1.1",
-    "@types/node": "16.x",
-    "@types/vscode": "^1.70.0",
-    "@typescript-eslint/eslint-plugin": "^5.31.0",
-    "@typescript-eslint/parser": "^5.31.0",
-    "@vscode/test-electron": "^2.1.5",
-    "eslint": "^8.20.0",
-    "glob": "^8.0.3",
-    "mocha": "^10.0.0",
-    "typescript": "^4.7.4"
+    "@types/lodash": "^4.14.199",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "18.x",
+    "@types/vscode": "^1.75.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
+    "@vscode/test-electron": "^2.3.4",
+    "eslint": "^8.50.0",
+    "glob": "^8.1.0",
+    "mocha": "^10.2.0",
+    "typescript": "^5.2.2"
   },
   "dependencies": {
-    "axios": "^1.1.0",
+    "@types/js-yaml": "^4.0.5",
+    "js-yaml": "^4.1.0",
+    "axios": "^1.5.0",
     "change-case": "^4.1.2",
     "gh-retrieve": "^1.1.2",
     "lodash": "^4.17.21"
