--- a/.my_templates/flutter_tdd_clean_templates/feature/repository/{{repository_name.snakeCase}}_repository_impl.template
+++ b/.my_templates/flutter_tdd_clean_templates/feature/repository/{{repository_name.snakeCase}}_repository_impl.template
@@ -3,7 +3,7 @@ import '../../../../core/errors/exceptions.dart';
 import '../../../../core/errors/failure.dart';
 import '../../../../core/utils/either.dart';
 import '../../../../core/utils/typedef.dart';
-import '../../domain/repositories/{{repository_name}}_repository.dart';
+import '../../domain/repositories/i_{{repository_name}}_repository.dart';
 
 import '../datasources/{{repository_name}}_remote_data_source.dart';
 
