--- a/.my_templates/flutter_tdd_clean_templates/test/usecase/params/{{usecase_name.snakeCase}}_usecase_test.template
+++ b/.my_templates/flutter_tdd_clean_templates/test/usecase/params/{{usecase_name.snakeCase}}_usecase_test.template
@@ -29,7 +29,7 @@ void main() {
   });
 
   
-  //! To this example we going supose tha in the repository call the method [login]
+  //! To this example we going suppose that in the repository call the method [login]
 
   test(
     '{{usecase_name.pascalCase}}Usecase: [IRepository.login] should call with the correct parameters',
